# HirePilot

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pgadmin-servers.json  start.ps1  stop.ps1
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13f9089c7e5f_initial_schema.py  1e2857a4e341_add_oauth_columns.py  6159f7dbe8e8_make_resume_version_id_nullable.py  a2b3c4d5e6f7_add_onboarding_questionnaire.py  a3b7c9d1e2f4_add_onboarding_fields_and_parsed_sections.py  a7b3c9d1e5f2_add_subscriptions_table.py  a87f2aeb629d_add_gmail_refresh_token.py  b5c8d2e7f3a1_add_agent_tables.py  c4e7a1b9d3f2_add_deleted_at_soft_delete.py  d5e8f2a1b3c7_add_work_experiences_and_educations.py  e1f2a3b4c5d6_add_company_career_search_tables.py  fed9a23be6a2_add_job_search_preferences.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  application_agent.py  ats_scoring_agent.py  base.py  company_search_agent.py  email_checker_agent.py  job_search_agent.py  linkedin_helper.py  linkedin_message_agent.py  linkedin_reply_agent.py  orchestrator.py  recommendations_agent.py  recruiter_search_agent.py  resume_tailor_agent.py  salary_negotiator_agent.py  (+1 more)
backend/tests/: conftest.py  test_applications_e2e.py  test_auth_e2e.py  test_health_e2e.py  test_job_filtering.py  test_jobs_e2e.py  test_linkedin_integration_e2e.py  test_llm_integration.py  test_profile_e2e.py  test_recruiter_verification.py  test_recruiters_e2e.py  test_resumes_e2e.py  test_soft_delete.py  test_subscription_e2e.py
(+122 files in other folders)
